--- a/00-P2-CS2B-FIA-April-2023/P2-Question-2.html
+++ b/00-P2-CS2B-FIA-April-2023/P2-Question-2.html
@@ -1,31 +1,35 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>Statistics with R</title>
+    <meta charset="utf-8" />
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Statistics with R
+]
+.subtitle[
+## Statistical Modelling with R for Actuarial Students
+]
+
 ---
-title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
-output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      countIncrementalSlides: false
----
 
-```{r setup, include=FALSE, cache=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(knitr)
-library(dplyr)
-library(janitor)
 
-options(scipen = 2, digits = 3) #set to two decimal 
-```
 
-```{css, echo=FALSE}
+
+&lt;style type="text/css"&gt;
 pre {
   background: #ADD8E6;
   max-width: 100%;
   overflow-x: scroll;
 }
-```
+&lt;/style&gt;
 
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -98,20 +102,26 @@ CS2B A2023–6
 
 Q2
 (i)
-```{r}
-Prem<-read.table("CS2B_A23_Qu_2_Data.csv", TRUE, ",") 
+
+```r
+Prem&lt;-read.table("CS2B_A23_Qu_2_Data.csv", TRUE, ",") 
 Prem_charged= 
 2500* (Prem$Mort*Prem$p_dth*80000 
 +Prem$Mort*(1-Prem$p_dth)*40000) 
 Prem_charged 
 ```
 
+```
+## [1]  187500  260000  640000 1080000
+```
+
  187500 260000 640000 080000 
 
 (ii)
-```{r}
+
+```r
 set.seed(123) 
-Tab_R<- data.frame(
+Tab_R&lt;- data.frame(
   cbind(G1_R=rbinom(2500,1,Prem$Mort),
         G2_R=rbinom(2500,1,Prem$Mort[2]),
         G3_R=rbinom(2500,1,Prem$Mort[3]),
@@ -122,14 +132,25 @@ Tab_R<- data.frame(
 
 summary(Tab_R) 
 Or
-```{r}
+
+```r
 set.seed(123) 
 G1_R=rbinom(2500,1,Prem$Mort) 
 G2_R=rbinom(2500,1,Prem$Mort[2]) 
 G3_R=rbinom(2500,1,Prem$Mort[3]) 
 G4_R=rbinom(2500,1,Prem$Mort[4]) 
-Tab_R<- data.frame(cbind(G1_R,G2_R,G3_R,G4_R)) 
+Tab_R&lt;- data.frame(cbind(G1_R,G2_R,G3_R,G4_R)) 
 summary(Tab_R) 
+```
+
+```
+##       G1_R            G2_R            G3_R            G4_R      
+##  Min.   :0.000   Min.   :0.000   Min.   :0.000   Min.   :0.000  
+##  1st Qu.:0.000   1st Qu.:0.000   1st Qu.:0.000   1st Qu.:0.000  
+##  Median :0.000   Median :0.000   Median :0.000   Median :0.000  
+##  Mean   :0.003   Mean   :0.002   Mean   :0.003   Mean   :0.007  
+##  3rd Qu.:0.000   3rd Qu.:0.000   3rd Qu.:0.000   3rd Qu.:0.000  
+##  Max.   :1.000   Max.   :1.000   Max.   :1.000   Max.   :1.000
 ```
 
 Or
@@ -153,11 +174,43 @@ Mean :0.0016 Mean :0.002 Mean :0.0028 Mean :0.0068
 Max. :1.0000 Max. :1.000 Max. :1.0000 Max. :1.0000 
 (The function “rbern” is not a part of the base R installation. However, if the candidate installs “Rlab” package and uses “rbern” function, full marks are to be awarded assuming no other errors)
 
-```{r}
+
+```r
 #install.packages("Rlab")
 library("Rlab")
+```
+
+```
+## Rlab 4.0 attached.
+```
+
+```
+## 
+## Attaching package: 'Rlab'
+```
+
+```
+## The following object is masked from 'package:dplyr':
+## 
+##     count
+```
+
+```
+## The following objects are masked from 'package:stats':
+## 
+##     dexp, dgamma, dweibull, pexp, pgamma, pweibull, qexp, qgamma,
+##     qweibull, rexp, rgamma, rweibull
+```
+
+```
+## The following object is masked from 'package:datasets':
+## 
+##     precip
+```
+
+```r
 set.seed(123) 
-Tab_R<- data.frame(
+Tab_R&lt;- data.frame(
   cbind(G1_R=rbern(2500,Prem$Mort),
         G2_R=rbern(2500,Prem$Mort[2]),
         G3_R=rbern(2500,Prem$Mort[3]),
@@ -165,6 +218,16 @@ Tab_R<- data.frame(
 )
   
 summary(Tab_R) 
+```
+
+```
+##       G1_R            G2_R            G3_R            G4_R      
+##  Min.   :0.000   Min.   :0.000   Min.   :0.000   Min.   :0.000  
+##  1st Qu.:0.000   1st Qu.:0.000   1st Qu.:0.000   1st Qu.:0.000  
+##  Median :0.000   Median :0.000   Median :0.000   Median :0.000  
+##  Mean   :0.003   Mean   :0.002   Mean   :0.003   Mean   :0.007  
+##  3rd Qu.:0.000   3rd Qu.:0.000   3rd Qu.:0.000   3rd Qu.:0.000  
+##  Max.   :1.000   Max.   :1.000   Max.   :1.000   Max.   :1.000
 ```
 G1_ R G2_ R G3_ R G4_R
 Min. :0.0000 Min. :0.000 Min. :0.0000 Min. :0.0000
@@ -209,7 +272,7 @@ for (i in 1:4) {
 M[,i] = 
 Tab_R[,i] * 
 ifelse( 
-Tab_U[,i]<= Prem$p_dth[i], 
+Tab_U[,i]&lt;= Prem$p_dth[i], 
 dth1, 
 dth2) 
 }
@@ -225,7 +288,7 @@ Mean : 96 Mean : 96 Mean : 192 Mean : 464
 ---
 
 (v)
-Aggregate<- c(sum(Tab_V$G1_V) , sum(Tab_V$G2_V), sum(Tab_V$G3_V), sum(Tab_V$G4_V) ) 
+Aggregate&lt;- c(sum(Tab_V$G1_V) , sum(Tab_V$G2_V), sum(Tab_V$G3_V), sum(Tab_V$G4_V) ) 
 Aggregate 
 1,] 240000 240000 480000 1160000 
 (vi)
@@ -253,3 +316,121 @@ In part (vii) marks were awarded for a range of sensible arguments in support of
 ---
 
 ---
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
