--- a/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.html
+++ b/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,8 +11,12 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Statistics with R
+]
+.subtitle[
 ## Statistical Modelling with R for Actuarial Students
+]
 
 ---
 
@@ -39,9 +43,10 @@ pre {
 
 ### Compound Poisson Distribution
 
-The annual aggregate claim amount of an insurer follows a compound Poisson 
-distribution with parameter 1,000. Individual claim amounts follow a Gamma 
-distribution with shape parameter α = 750 and rate parameter λ = 0.25. 
+* The annual aggregate claim amount of an insurer follows a compound Poisson 
+distribution with parameter 1,000. 
+* Individual claim amounts follow a Gamma 
+distribution with shape parameter `\(\alpha = 750\)` and rate parameter `\(\lambda = 0.25\)`. 
 
 ---
 1. Generate 20,000 simulated aggregate claim values for this insurer, using a 
@@ -265,6 +270,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
