--- a/00-K2-CS2B-FIA-APRIL-2022/K2-Question3.html
+++ b/00-K2-CS2B-FIA-APRIL-2022/K2-Question3.html
@@ -1,31 +1,35 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>Statistics with R</title>
+    <meta charset="utf-8" />
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Statistics with R
+]
+.subtitle[
+## Statistical Modelling with R for Actuarial Students
+]
+
 ---
-title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
-output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      countIncrementalSlides: false
----
 
-```{r setup, include=FALSE, cache=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(knitr)
-library(dplyr)
-library(janitor)
 
-options(scipen = 2, digits = 3) #set to two decimal 
-```
 
-```{css, echo=FALSE}
+
+&lt;style type="text/css"&gt;
 pre {
   background: #ADD8E6;
   max-width: 100%;
   overflow-x: scroll;
 }
-```
+&lt;/style&gt;
 
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -85,14 +89,16 @@ zx2 and zx3 ONLY in your answer script.
 
 ### Part A
 
-```{r}
+
+```r
 graduation = 
 read.csv(file = "CS2B_A22_Qu_3_Data.csv", head = TRUE) 
 ```
 
 ---
 
-```{r}
+
+```r
 graduation$zx1 = (graduation$Deaths - graduation$Exposure * 
 graduation$Graduation1) / sqrt(graduation$Exposure * 
 graduation$Graduation1) 
@@ -137,8 +143,20 @@ the results in part Part F.
 
 
 
-```{r}
+
+```r
 head(graduation[, 7:9], 7) 
+```
+
+```
+##      zx1     zx2      zx3
+## 1 -0.453  2.0801  0.07722
+## 2 -0.730  1.2117 -0.45305
+## 3  0.430  1.7881  0.49830
+## 4 -0.157  0.5764 -0.25041
+## 5  0.552  0.7225  0.35120
+## 6  0.281 -0.0716  0.00206
+## 7 -0.556 -1.3415 -0.83947
 ```
  zx1 zx2 zx3
 1 -0.4532486 2.08008602 0.077224448
@@ -152,7 +170,8 @@ head(graduation[, 7:9], 7)
 ---
 
 
-```{r}
+
+```r
 chisq = vector(length = 3) 
 chisq = sum(graduation$zx1^2) 
 chisq = sum(graduation$zx2^2) 
@@ -161,18 +180,23 @@ chisq[3] = sum(graduation$zx3^2)
 
 ---
 
-```{r} 
+
+```r
 df = c(36, 37, 35) 
 1 - pchisq(chisq, df = df) 
+```
+
+```
+## [1] 3.25e-08       NA 7.13e-02
 ```
  7.002971e-02 5.582300e-08 7.128381e-02 
 OR:
 
-```{r}
+
+```r
 chisq1 = sum(graduation$zx1^2) 
 chisq2 = sum(graduation$zx2^2) 
 chisq3 = sum(graduation$zx3^2) 
-
 ```
 
 
@@ -216,16 +240,16 @@ of deviations of the same sign
 ---
 Part D
 EITHER:
-```{r}
+
+```r
 pos = vector(length = 3) 
 neg = vector(length = 3) 
-pos = length(graduation$zx1[graduation$zx1 <0]) 
-pos = length(graduation$zx2[graduation$zx2 <0]) 
-pos[3] = length(graduation$zx3[graduation$zx3 <0 ]) 
-neg = length(graduation$zx1[graduation$zx1 < 0]) 
-neg = length(graduation$zx2[graduation$zx2 < 0]) 
-neg[3] = length(graduation$zx3[graduation$zx3 < 0]) 
-
+pos = length(graduation$zx1[graduation$zx1 &lt;0]) 
+pos = length(graduation$zx2[graduation$zx2 &lt;0]) 
+pos[3] = length(graduation$zx3[graduation$zx3 &lt;0 ]) 
+neg = length(graduation$zx1[graduation$zx1 &lt; 0]) 
+neg = length(graduation$zx2[graduation$zx2 &lt; 0]) 
+neg[3] = length(graduation$zx3[graduation$zx3 &lt; 0]) 
 ```
 
 pos 
@@ -238,14 +262,14 @@ OR:
 
 ---
 
-```{r}
-pos1 = length(graduation$zx1[graduation$zx1 < 0]) 
-pos2 = length(graduation$zx2[graduation$zx2 < 0]) 
-pos3 = length(graduation$zx3[graduation$zx3 < 0]) 
-neg1 = length(graduation$zx1[graduation$zx1 < 0]) 
-neg2 = length(graduation$zx2[graduation$zx2 < 0]) 
-neg3 = length(graduation$zx3[graduation$zx3 < 0])
 
+```r
+pos1 = length(graduation$zx1[graduation$zx1 &lt; 0]) 
+pos2 = length(graduation$zx2[graduation$zx2 &lt; 0]) 
+pos3 = length(graduation$zx3[graduation$zx3 &lt; 0]) 
+neg1 = length(graduation$zx1[graduation$zx1 &lt; 0]) 
+neg2 = length(graduation$zx2[graduation$zx2 &lt; 0]) 
+neg3 = length(graduation$zx3[graduation$zx3 &lt; 0])
 ```
 
 pos1
@@ -411,3 +435,121 @@ The p-value for graduation 3 is 0.6787
 The conclusions in part Part C remain unchanged 
 as the p-values calculated under the grouping of signs test support the conclusions
 in part Part C 
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
