--- a/00-P2-CS2B-FIA-April-2023/P2-Question-1.html
+++ b/00-P2-CS2B-FIA-April-2023/P2-Question-1.html
@@ -1,31 +1,35 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>Statistics with R</title>
+    <meta charset="utf-8" />
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Statistics with R
+]
+.subtitle[
+## Statistical Modelling with R for Actuarial Students
+]
+
 ---
-title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
-output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      countIncrementalSlides: false
----
 
-```{r setup, include=FALSE, cache=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(knitr)
-library(dplyr)
-library(janitor)
 
-options(scipen = 2, digits = 3) #set to two decimal 
-```
 
-```{css, echo=FALSE}
+
+&lt;style type="text/css"&gt;
 pre {
   background: #ADD8E6;
   max-width: 100%;
   overflow-x: scroll;
 }
-```
+&lt;/style&gt;
 
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -105,18 +109,43 @@ using a force of interest of 6% p.a.
 
 Q1 (i) 
 
-```{r}
+
+```r
 library(markovchain)
-transitions <- matrix(  c(0.98, 0.019,0.001,
+```
+
+```
+## Warning: package 'markovchain' was built under R version 4.3.3
+```
+
+```
+## Package:  markovchain
+## Version:  0.9.5
+## Date:     2023-09-24 09:20:02 UTC
+## BugReport: https://github.com/spedygiorgio/markovchain/issues
+```
+
+```r
+transitions &lt;- matrix(  c(0.98, 0.019,0.001,
                            0.2, 0.75, 0.05,
 						   0,  0, 1),
    byrow=TRUE,nrow=3,
    dimnames=list (c("healthy","sick", "dead"), 
                   c("healthy","sick","dead"))) 
 
-(transitions_markov <- new("markovchain", 
+(transitions_markov &lt;- new("markovchain", 
                            transitionMatrix=transitions)) 
+```
 
+```
+## Unnamed Markov chain 
+##  A  3 - dimensional discrete Markov Chain defined by the following states: 
+##  healthy, sick, dead 
+##  The transition matrix  (by rows)  is defined as follows: 
+##         healthy  sick  dead
+## healthy    0.98 0.019 0.001
+## sick       0.20 0.750 0.050
+## dead       0.00 0.000 1.000
 ```
 
 A 3-dimensional discrete Markov Chain defined by the following states:
@@ -131,8 +160,14 @@ dead 0.00 0.000 1.000
 
 (ii)
 
-```{r}
+
+```r
 c(1,0,0)*transitions_markov^2 
+```
+
+```
+##      healthy   sick    dead
+## [1,]   0.964 0.0329 0.00293
 ```
 
 * The probability that the life will be sick at t=2 weeks is 3.287% 
@@ -141,14 +176,21 @@ c(1,0,0)*transitions_markov^2
 
 (iii)
 
-```{r}
-transitions_sick<-matrix(c(0.98, 0.019,0.001,0,1, 0,0,0,1),byrow=TRUE,nrow=3, dimnames=list(c("healthy","sick","dead"),c("healthy",
+
+```r
+transitions_sick&lt;-matrix(c(0.98, 0.019,0.001,0,1, 0,0,0,1),byrow=TRUE,nrow=3, dimnames=list(c("healthy","sick","dead"),c("healthy",
 "sick","dead"))) 
 ```
 
-```{r}
-transitions_sickmarkov <- new("markovchain", transitionMatrix=transitions_sick) 
+
+```r
+transitions_sickmarkov &lt;- new("markovchain", transitionMatrix=transitions_sick) 
 c(1,0,0)*transitions_sickmarkov^52 
+```
+
+```
+##      healthy  sick   dead
+## [1,]    0.35 0.618 0.0325
 ```
 
 
@@ -159,8 +201,13 @@ the probability that the life will be sick at some point in the next 52 weeks is
 
 (iv)
 
-```{r}
+
+```r
 0.98^52
+```
+
+```
+## [1] 0.35
 ```
 
 * The probability a healthy life will have remained healthy for the entire year is
@@ -185,29 +232,31 @@ or other similar reasonable comment about the nature of this transition
 ---
 
 (vii) calculation of occupancy probabilities
-```{r}
+
+```r
 #initial populations
-s<-0.01
-h<-0.99
-r<-0
-dead<-0 
-b<-0.3 
+s&lt;-0.01
+h&lt;-0.99
+r&lt;-0
+dead&lt;-0 
+b&lt;-0.3 
 #par value
 #daily rates
-k<-0.13 
-j<-0.04 
+k&lt;-0.13 
+j&lt;-0.04 
 #just set up 4x4
-days<-100 
+days&lt;-100 
 dt1=0.01 
 #in days
-no_steps<-days/dt1 
+no_steps&lt;-days/dt1 
 #100 days
 ```
 
 ---
 
-```{r eval=FALSE}
-mat_ans<-matrix(0,no_steps,4) 
+
+```r
+mat_ans&lt;-matrix(0,no_steps,4) 
 for (qq in 1:no_steps) { 
 mu12=b*s
 #mu12=b*s, or try constant rate
@@ -217,8 +266,8 @@ mu21=0 ; mu23=k #recovery rate
 mu24=j #death rate 
 mu31=0.0
 mu32=0.0
-mu34<-0 
-mu43<-0
+mu34&lt;-0 
+mu43&lt;-0
 mu41=0
 mu42=0 
 mu11=-mu12-mu13-mu14
@@ -234,20 +283,20 @@ P_dt =diag(4) + gen_matrix*dt1
 #gets prob matrix each loop
 occ_probs=Po%*%P_dt 
 #occupancy probs end of each period given starting states
-h<-occ_probs
-s<-occ_probs[2]
-r<-occ_probs[3]
-dead<-occ_probs[4] 
-mat_ans[qq,]<-occ_probs 
+h&lt;-occ_probs
+s&lt;-occ_probs[2]
+r&lt;-occ_probs[3]
+dead&lt;-occ_probs[4] 
+mat_ans[qq,]&lt;-occ_probs 
 #posts answers in matrix for plotting
 }
-
 ```
 ---
 
 (viii)
 
-```{r eval=FALSE}
+
+```r
 #plots
 x = seq(from = 1/100, to = 100, by = 1/100) 
 plot(x,mat_ans[,1],ylim=c(0,max(mat_ans)),col=1,lwd=3, lty=1,xlab="",ylab="",type="l",main="HSRD model") 
@@ -258,7 +307,6 @@ lines(x,mat_ans[,3],lwd=1,lty=2)
 lines(x,mat_ans[,4],lwd=1,lty=3) 
 # dead
 legend(x="topright",legend = c("healthy","sick", "recovered","dead"),lwd = c(3,1,1,1),lty = c(1,1,2,3)) 
-
 ```
 
 ---
@@ -274,7 +322,7 @@ The probability that a life healthy at time 0 is sick after 30 days is 0.1171159
 ---
 
 (x)
-yyy<-mat_ans[,2] 
+yyy&lt;-mat_ans[,2] 
 sum(0.01*yyy*exp(-0.06*seq(1,10000)/36500)) [2]
  4.227194 
 The required expected present value is £4.23 
@@ -300,3 +348,121 @@ step 3 - calculating the mu values (max 3 marks)
 step 4 - converting the mu’s into probabilities (max 3 marks)
 step 5 - outputting the matrix (1 mark)
 Similarly for part (x) a wide variety of approaches to incorporating an interest rate element were given full credit.
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
