--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.html
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.html
@@ -42,142 +42,211 @@ pre {
 
 ---
 
-3 A data science actuary wants to build a linear regression model for cars that will
-predict the stopping distance based on their speed.
+Q. 4)
+The table below shows the total claim number (cancellations) per year, Xij, for 4 travel companies over last 4 years.
+Years,j
+1
+2
+3
+4
+Travel Companies, i
+Make
+455
+458
+587
+531
+Ease
+251
+322
+292
+340
+Go
+309
+246
+217
+120
+Clear
+400
+426
+470
+547
+i) Using Empirical Bayes Credibility Theory (EBCT) Model 1, compute the following
+a) Copy the below code to load the data:
+q4&lt;-matrix(c(455,251,309,400,
+458,322,246,426,
+587,292,217,470,
+531,340,120,547),
+ncol=4,nrow=4)
+(1)
+b) E[m(θ)]
+(2)
+c) E[s2(θ)]
+(2)
+d) Var[m(θ)]
+(3)
+e) Z
+(2)
 
-The actuary will work on the dataset that already exists in R known as ‘Cars’, which
-can be initialised using the following code:
-data("cars")
-attach(cars)
-This dataset has 50 observations of two variables:
-*  The first variable ‘speed’ is speed, in miles per hour (mph).
-*  The second variable ‘dist’ is stopping distance, in feet.
+ii) Using part (i), calculate the expected claim number for Go and Clear.
+
+iii) What additional information is required to use EBCT Model 2.
 
 ---
 
-(i) Fit a linear regression model to the data using stopping distance as the
-response variable and speed as the only explanatory variable, stating the
-estimated intercept and slope of the regression line. 
-The actuary wants to predict the stopping distances for the following ten speed values:
-6 7 16 22 28 33 40 42 57 64
-
-
----
-
-(ii) Estimate the ten expected stopping distances, based on your fitted model from
-part (i). 
-The actuary is concerned about the uncertainty around the mean predictions.
-(iii) Calculate ten confidence intervals, one for each of the expected stopping
-distances in part (ii), using a 90% confidence level. 
-(iv) (a) State the interpretation of the 90% confidence interval for the stopping
-distances for cars with speed 64 mph, using your answer to part (iii).
-(b) Comment on the suitability of the linear regression model, based on the
-confidence intervals obtained in part (iii).
+iv) Travel company “Ease” launched a membership program last year providing full refund on cancellations. Number of cancellations believed to follow binomial distribution with parameters n=3 and 0.20.
+Number of cancellations in last year on 150 memberships are as follows:
+Cancellations
+0
+1
+2
+3
+Members
+61
+71
+15
+3
+Carry out goodness of fit test for the binomial model specified for number of cancellations on each membership.
+(5)
 
 ---
 
+[20 Marks]
+Solution 4:
+i)
 
-Q3
 
 ```r
-#Initialise the dataset.
-data("cars")
-attach(cars)
+q4&lt;-matrix(c(455,251,309,400,
+458,322,246,426,
+587,292,217,470,
+531,340,120,547),
+ncol=4,nrow=4)
 ```
 
----
-
-(i)
 
 
 ```r
-model = lm(dist~speed, data = cars) 
-model
+q4
+```
+
+```
+##      [,1] [,2] [,3] [,4]
+## [1,]  455  458  587  531
+## [2,]  251  322  292  340
+## [3,]  309  246  217  120
+## [4,]  400  426  470  547
+```
+
+
+```r
+n&lt;-ncol(q4)
+n
+```
+
+```
+## [1] 4
+```
+
+
+
+```r
+m&lt;-mean(rowMeans(q4))
+m
+```
+
+```
+## [1] 373.1875
+```
+
+
+
+```r
+s&lt;-mean(apply(q4,1,var))
+s
+```
+
+```
+## [1] 3967.854
+```
+
+
+
+```r
+v&lt;-var(rowMeans(q4)) - mean(apply(q4,1,var))/n
+Z&lt;- n/(n+s/v)
+n
+```
+
+```
+## [1] 4
+```
+
+
+Z
+[1] 0.9443816
+[1+2+2+3+2]
+ii)
+Z*rowMeans(q4[3:4,])+(1-Z)*m
+[1] 231.3532 455.8799
+
+
+---
+
+iii)
+Risk Volumes are required to apply EBCT2
+
+
+---
+
+iv)
+
+
+```r
+obs&lt;-c(61,71,15,3)
+```
+
+
+* Combine 2 and 3 since value of 3 is less than 5
+
+
+```r
+obs.comb&lt;-c(61,71,15 + 3)
+```
+
+
+
+```r
+p&lt;-0.2
+exp&lt;-dbinom(c(0:1),3,p)
+exp[3]&lt;-1-pbinom(1,3,p)
+sum(exp)
+```
+
+```
+## [1] 1
+```
+
+
+
+---
+
+
+```r
+chisq.test(x=obs.comb,p=exp)
 ```
 
 ```
 ## 
-## Call:
-## lm(formula = dist ~ speed, data = cars)
+## 	Chi-squared test for given probabilities
 ## 
-## Coefficients:
-## (Intercept)        speed  
-##     -17.579        3.932
+## data:  obs.comb
+## X-squared = 6.7371, df = 2, p-value = 0.03444
 ```
 
 
+* Since p-value &lt;0.5, we have sufficient evidence to reject the null hypothesis that cancellation follows bin(3,0.2)
 
 ---
-
-(ii)
-
-
-```r
-data_predict &lt;- data.frame(speed = c(6,7,16,22,28,33,40,42,57,64))
-```
-
-
-
-```r
-predict(model,newdata=data_predict) 
-```
-
-```
-##          1          2          3          4          5          6          7 
-##   6.015358   9.947766  45.339445  68.933898  92.528350 112.190394 139.717255 
-##          8          9         10 
-## 147.582073 206.568204 234.095066
-```
-
-
-
----
-
-(iii)
-
-
-```r
-predict(model,newdata=data_predict, interval="confidence",level=0.90) 
-```
-
-```
-##           fit        lwr       upr
-## 1    6.015358  -1.482803  13.51352
-## 2    9.947766   3.050136  16.84540
-## 3   45.339445  41.667593  49.01130
-## 4   68.933898  63.063300  74.80450
-## 5   92.528350  83.019704 102.03700
-## 6  112.190394  99.393826 124.98696
-## 7  139.717255 122.189498 157.24501
-## 8  147.582073 128.688793 166.47535
-## 9  206.568204 177.348219 235.78819
-## 10 234.095066 200.029446 268.16069
-```
-
-
-
----
-
-Part (i) was well answered in general. A common error was using rbinom(1, n, p), therefore not producing the detailed sample.
-In part (ii) there were mixed answers with various errors.
-Answers in part (iii) were also mixed, with common errors including not stating correctly, or at all, the hypotheses, parameter errors and not providing a clear conclusion.
-
-
-7 139.717255 122.189498 157.24501
-8 147.582073 128.688793 166.47535
-9 206.568204 177.348219 235.78819
-10 234.095066 200.029446 268.16069 
-
----
-
-(iv)(a)
-
-* The CI is constructed such that with repeated sampling, 90% of the obtained intervals will contain the true unknown mean stopping distance of cars travelling at 64 mph. 
-(b)
-
-* For speed 6mph the model gives a CI with negative lower endpoint. 
-* A linear model, predicting negative stopping distance values, may not be
-appropriate. 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
