--- a/00-G2-CS2B-FAI-April-2021/Question_2_Pareto_Distribution.html
+++ b/00-G2-CS2B-FAI-April-2021/Question_2_Pareto_Distribution.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,8 +11,12 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Statistics with R
+]
+.subtitle[
 ## Statistical Modelling with R for Actuarial Students
+]
 
 ---
 
@@ -36,24 +40,28 @@ pre {
 
 ---
 
-2 Before answering this question, construct the function, rpareto, in R using the 
+#### Preparation
+
+Before answering this question, construct the function, rpareto, in R using the 
 following code: 
+
 
 ```r
 rpareto = function(n, alpha, lambda){ 
-rp = lambda * ((1 - runif(n))^(-1/alpha) - 1) 
-rp}
+  rp = lambda * ((1 - runif(n))^(-1/alpha) - 1) 
+  rp
+  }
 ```
 
 The &lt;tt&gt;rpareto()&lt;/tt&gt; function generates a random sample of size n from a two-parameter 
-Pareto distribution with parameters α and λ. 
+Pareto distribution with parameters `\(\alpha\)` and λ. 
 
 ---
 
 ### Part 1
 
-Generate, using rpareto, a random sample of size 25,000 from the 
-two-parameter Pareto distribution with parameters α = 3 and λ = 1, assigning 
+Generate, using &lt;tt&gt;rpareto&lt;/tt&gt;, a random sample of size 25,000 from the 
+two-parameter Pareto distribution with parameters `\(\alpha = 3\)` and λ = 1, assigning 
 the simulated values to a vector called &lt;tt&gt;A_vec&lt;/tt&gt;. 
 
 You should set a random  number generator seed of 123 before generating &lt;tt&gt;A_vec&lt;/tt&gt; and use the R function, 
@@ -157,10 +165,11 @@ hist(A_exceed_u(A = A_vec, u = 1),breaks=500,col="lightpink")
 ### Part 3
 
 Construct another R function, called &lt;tt&gt;F_u&lt;/tt&gt;, with one argument, 
-A_greater_than_u, that returns a vector of length 101, containing the 
+&lt;tt&gt;A_greater_than_u&lt;/tt&gt;, that returns a vector of length 101, containing the 
 probabilities: 
-PሺAi – u ≤ x | Ai &gt; u), where `\(x \geq 0\)`, 
+`$$P(Ai – u ≤ x | Ai &gt; u)$$`, where `\(x \geq 0\)`, 
 for values of x from 0 to 10 inclusive, at intervals of 0.1. 
+
 Use the R function, &lt;tt&gt;head()&lt;/tt&gt;, to display in your answer script the first eight 
 values of F_u when A_greater_than_u = A_exceed_u with arguments 
 A = A_vec and `\(u = 1\)`. 
@@ -182,6 +191,7 @@ F_u =  function(A_greater_than_u) {
 } 
 ```
 
+
 ```r
 head(F_u(A_exceed_u(A = A_vec, u = 1)), 8) 
 ```
@@ -191,10 +201,6 @@ head(F_u(A_exceed_u(A = A_vec, u = 1)), 8)
 ```
 
 
- 
- 0.0000000 0.1463087 0.2526846 0.3439597 0.4201342 
-0.4838926 0.5362416 0.5895973 
- 
 
 
 ---
@@ -202,9 +208,11 @@ head(F_u(A_exceed_u(A = A_vec, u = 1)), 8)
 ### Part 4
 
 
-Plot, on a single graph, four line graphs of the values of &lt;tt&gt;F_u&lt;/tt&gt; against x for 
+* Plot, on a single graph, four line graphs of the values of &lt;tt&gt;F_u&lt;/tt&gt; against x for 
 the values of x specified in part (iii) when A_greater_than_u = A_exceed_u, 
-A = A_vec and u = 1, 2, 3 and 4. You should use separate colours to identify 
+A = A_vec and u = 1, 2, 3 and 4. 
+
+* You should use separate colours to identify 
 each line graph and you should clearly specify which value of `\(u\)` is represented 
 by each of the four line graphs. 
 
@@ -234,6 +242,8 @@ plot(
 ```
 
 ![](Question_2_Pareto_Distribution_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+
+---
 
 
 
@@ -265,16 +275,20 @@ For all but the smallest values of x, `\(F_u(x)\)` decreases as u increases.
  
 
 This is consistent with the result that if X ~ Pa(alpha, lambda), then the threshold exceedance 
-X – u | X &gt; u is distributed as `\(Pa(alpha, lambda + u)\)`. 
+`\(X – u | X &gt; u\)` is distributed as `\(Pa(alpha, lambda + u)\)`. 
  
 
 There is some irregularity caused by sampling variation due to low data volumes above the 
 higher values of u. 
  
 
-As a result of this irregularity, the curves for u = 3 and u = 4 cross over for small values of x.
+As a result of this irregularity, the curves for `\(u = 3\)` and u = 4 cross over for small values of x.
 
 --- 
+
+END
+
+---
 
 ---
 
@@ -348,6 +362,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
