--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_2.html
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_2.html
@@ -46,6 +46,8 @@ pre {
 
 A. Simulate a sample of 100 values from a ***Beta*** distribution with 
 parameters `\(a = 3\)`, `\(b = 1\)`.
+
+&lt;p&gt;
 Use the command &lt;tt&gt;set.seed(12345)&lt;/tt&gt; to 
 initialise the random number generator, before you start the simulation. 
 
@@ -116,9 +118,10 @@ R code:
 set.seed(12345)
 nsim = 1000 
 xbar = numeric(nsim) 
+
 for (i in 1:nsim){ 
-x = rbeta(100,3,1) 
-xbar[i] = mean(x) 
+  x = rbeta(100,3,1) 
+  xbar[i] = mean(x) 
 }
 ```
 
@@ -137,7 +140,8 @@ Alternative code may be used. For example, without using a loop:
 set.seed(12345)
 
 xbar &lt;- replicate(1000,
-                  mean(rbeta(100,3,1)) )
+                  mean(rbeta(100,3,1)) 
+                  )
 ```
 
 ---
@@ -212,10 +216,6 @@ t.test(y, conf.level =0.90)
 ##      2.96
 ```
 
-```r
-# 2.124776 3.795224
-```
-
 ---
 
 
@@ -237,14 +237,15 @@ mean(y)+qt(0.95, length(y)-1) * sd(y)/sqrt(length(y))
 ```
 ## [1] 3.795224
 ```
+
 We have assumed that the data come from a normal distribution. 
 CI is given by (2.125, 3.795) 
 
 ---
 
-#### Part (d)
+### Part (D)
 
-(iv)
+
 R code:
 
 ```r
@@ -255,15 +256,13 @@ se.t
 ```
 ## [1] 0.4556314
 ```
+* Standard error of sample mean = 0.456. 
 
-# 0.4556314
-Standard error of sample mean = 0.456. 
 ---
 
-#### Part (e)
+#### Part (E)
 
 
-(v)
 R code:
 
 
@@ -271,10 +270,12 @@ R code:
 set.seed(12345)
 nsim = 10^4 
 ybar.sim = numeric(nsim) 
+
 for (i in 1:nsim){ 
-y.sim = sample(y, replace=T) 
-ybar.sim[i] = mean(y.sim) 
+  y.sim = sample(y, replace=T) 
+  ybar.sim[i] = mean(y.sim) 
 }
+
 se.boot = sd(ybar.sim); se.boot 
 ```
 
